# hccinfhir

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_upates.ipynb
src/hccfhir/: extractor.py
src/hccinfhir/: __init__.py  datamodels.py  extractor.py  extractor_837.py  extractor_fhir.py  filter.py  hccinfhir.py  model_agesex.py  model_calculate.py  model_coefficients.py  model_demographics.py  model_dx_to_cc.py  model_hierarchies.py  model_interactions.py  models.py  utils.py
src/hccinfhir/data/: __init__.py  hcc_is_chronic.csv  ra_coefficients_2025.csv  ra_coefficients_2026.csv  ra_dx_to_cc_2025.csv  ra_dx_to_cc_2026.csv  ra_eligible_cpt_hcpcs_2023.csv  ra_eligible_cpt_hcpcs_2024.csv  ra_eligible_cpt_hcpcs_2025.csv  ra_eligible_cpt_hcpcs_2026.csv  ra_hierarchies_2025.csv  ra_hierarchies_2026.csv  sample_837_1.txt  sample_837_5.txt  sample_837_6.txt  sample_837_9.txt  sample_eob_2.json  sample_eob_200.ndjson  sample_eob_3.json
src/hccinfhir/samples/: sample_837_10.txt  sample_837_11.txt  sample_837_2.txt  sample_837_3.txt  sample_837_4.txt  sample_837_7.txt  sample_837_8.txt  sample_eob_1.json  sample_eob_2.json
tests/: test_combined_mapping.py  test_extractor.py  test_extractor_837.py  test_extractor_eob.py  test_filter.py  test_hccinfhir.py  test_model_agesex.py  test_model_calculate.py  test_model_coefficients.py  test_model_demographics.py  test_model_dx_to_cc.py  test_model_hierarchies.py  test_model_interactions.py  test_model_newenrollee.py
