[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hccinfhir"
version = "0.0.2"
authors = [
  { name="Yubin Park", email="yubin.park@mimilabs.ai" },
]
description = "HCC Algorithm for FHIR Resources"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["pydantic>=2.10.3"]

[project.urls]
Homepage = "https://github.com/mimilabs/hccinfhir"
Issues = "https://github.com/mimilabs/hccinfhir/issues"

[tool.hatch.build]
packages = ["src/hccinfhir"]
include = [
    "*.py",
    "*.json",
    "*.csv"
]

[tool.hatch.build.targets.wheel]
packages = ["src/hccinfhir"]

[tool.coverage.run]
source_pkgs = ["hccinfhir"]
branch = true
parallel = true
omit = [
  "src/hccinfhir/__about__.py",
]

[tool.coverage.paths]
hccinfhir = ["src/hccinfhir", "*/hccinfhir/src/hccinfhir"]
tests = ["tests", "*/hccinfhir/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]